--- a/sass/global.scss
+++ b/sass/global.scss
@@ -13,7 +13,7 @@ body {
   right: 0;
   z-index: 2;
   //background: red;
-  background: rgba(#222222, 0.98);
+  background: rgba(65, 69, 69, 0.98);
 }
 
 .photo-stream {
